--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Homepage</title>
     <link href="https://fonts.googleapis.com/css?family=Cormorant|Cormorant+Garamond|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <script type="text/javascript" src="login_effect.js"></script>
 </head>
 
 <body>
@@ -19,8 +20,10 @@
                 <li><a href="www.staringatr.com">Tutorials</a></li>
                 <li><a href="about.html">About me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                
             </ul>
         </nav>
+        <a href="#" target=_self onclick="pop()" class="login-but">Login</a>
     </header>
 
     <main>
@@ -40,9 +43,14 @@
                         <h3>Cirriculum Vitae</h3>
                     </div>
                 </a>
-                <a href="www.staringatr.com">
+                <a href="http://www.staringatr.com">
                     <div class="index-boxlink-square">
                         <h3>Tutorials</h3>
+                    </div>
+                </a>
+                <a href="projects.html">
+                    <div class="index-boxlink-rect">
+                        <h3>Projects</h3>
                     </div>
                 </a>
                 <a href="about.html">
